# rescript-react-navigation

./: CHANGELOG.md  CONTRIBUTING.md  README.md  bsconfig.json  dune  dune-project  package-lock.json  package.json  rescript.json
.github/workflows/: build.yml
example/: .gitignore  App.js  app.json  bsconfig.json  index.js  package.json
example/android/: gradle.properties
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/ios/: Podfile
example/ios/ProjectName/: AppDelegate.m  LaunchScreen.storyboard
example/ios/ProjectName.xcodeproj/: project.pbxproj
example/ios/ProjectName.xcodeproj/xcshareddata/xcschemes/: ProjectName-tvOS.xcscheme  ProjectName.xcscheme
example/src/: App.re
example/src/components/: Search.re
src/: AppContainer.bs.js  AppContainer.re  AppContainerFunctor.re  BottomTabs.bs.js  BottomTabs.re  BottomTabs.res  Core.bs.js  Core.re  Core.res  Drawer.bs.js  Drawer.re  Drawer.res  DrawerNavigator.re  Elements.bs.js  Elements.re  Elements.res  Example.bs.js  Example.re  Example.res  Interop.js  MaterialBottomTabs.bs.js  MaterialBottomTabs.re  MaterialBottomTabs.res  MaterialTopTabs.bs.js  MaterialTopTabs.re  MaterialTopTabs.res  Native.bs.js  Native.re  Native.res  NativeStack.bs.js  NativeStack.re  NativeStack.res  Navigation.re  NavigationActions.re  NavigationActions.res  NavigationContainer.re  NavigationOptions.bs.js  NavigationOptions.re  NavigationState.re  NavigationState.res  (+11 more)
